[metadata]
project_name = ...
author = ...
contact = ...
license_file = LICENSE
description_file = README.md


[isort]
line_length = 120
profile = black
filter_files = True


[flake8]
max_line_length = 120
show_source = True
format = pylint
exclude =
    .git
    __pycache__
    data/*
    tests/*
    notebooks/*
    logs/*


[tool:pytest]
python_files = tests/*
log_cli = True
markers =
    slow
addopts =
    --durations=0
    --strict-markers
    --doctest-modules
filterwarnings =
    ignore::DeprecationWarning
    ignore::UserWarning
